# elasticsearch-poc

./: .gitignore  README.md  dev_http_ca.crt  local.example.env  pyproject.toml
elasticsearch_poc/: main.py
elasticsearch_poc/config/: __init__.py  settings.py
elasticsearch_poc/elastic/: client.py  index_names.py
elasticsearch_poc/elasticsearch/: client.py
elasticsearch_poc/models/: base_mapping_model.py  nba_player.py
elasticsearch_poc/services/: nba_player_service.py
resources/: list_of_nba_players.json
