[tool.poetry]
name = "elasticsearch_poc"
version = "0.1.0"
description = ""
authors = ["DmytroZasl <zaslavsky.dima20@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
elasticsearch = "^8.11.0"
ruff = "^0.1.6"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Linters
[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 100

select = [
    "I", # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "F", # pyflakes
    "E", # pycodestyle
    "TID", # flake8-tidy-imports
    "RUF", # ruff-internal
    "C901", # mccabe
]
ignore = [
    "E501", # line too long, handled by black
    "C401", # generator syntax for sets vs always force set comprehension
    "PLC0414", # allow explicit re-exports using 'as' without forcing __all__
    "RUF001", # allow CYRILLIC letter
]

[tool.ruff.isort]
known-first-party = ["elasticsearch_poc"]